public/css/homepage.css
.top-item {
    margin-top: 80px;
    padding:50px 0px 50px 0px;
    background: url(../img/Woodland_Venture_Fire_Pit.jpg);
    background-size: cover;
    background-position: 15%;
    -moz-background-size: cover;
}

.quote_row {
    padding-top: 80px;
    padding-bottom: 80px;
}

.logo_panel {
    max-width: 100% ;
}

.party-picture-col {
    background: url("../img/Woodland_Venture_Family_Toast_Marshmallows.jpg") no-repeat center top scroll;
    background-position: center;
    background-size: cover;
}

.picture-col {
    max-width: 800px;
    margin-left: 30px;
    margin-right: 30px;
}

a.anchor {
    display: block;
    position: relative;
    top: -100px;
    visibility: hidden;
}

.group-picture-col {
    background: url("../img/Woodland_Venture_Family_Kettle.jpg") no-repeat center top scroll;
    background-position: center;
    background-size: cover;
}

.panel-borderless {
  border: 0;
  box-shadow: none;
}

.corp-picture-col {
    background: url("../img/Woodland_Venture_Bucket_Activity.jpg") no-repeat center top scroll;
    background-position: 7%;
    background-size: cover;
}

.large-h1 {
    font-size: 50px;
}

.sch1-picture-col {
    background: url("../img/Woodland_Venture_Child_Rope_Activity.jpg") no-repeat center top scroll;
    background-position: 25%;
    background-size: cover;
}

.sch2-picture-col {
    background: url("../img/Woodland_Venture_Children_Play_Tree.jpg") no-repeat center top scroll;
    background-position: center;
    background-size: cover;
}

#image-row-1 {
    height: 500px;
    background: url(../img/Woodland_Venture_Fire_Lighting_Activity.jpg);
    background-size: cover;
    background-position: 40%;
    -moz-background-size: cover;
}

